--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,18 @@ html:
   # use_issues_button: true
   use_repository_button: true
 
+#######################################################################################
+# Parse and render settings
 parse:
-  myst_enable_extensions:
-    # don't forget to list any other extensions you want enabled,
-    # including those that are enabled by default!
+  myst_enable_extensions:  # default extensions to enable in the myst parser. See https://myst-parser.readthedocs.io/en/latest/using/syntax-optional.html
+    - amsmath
+    - colon_fence
     - deflist
+    - dollarmath
+    - html_admonition
+    - html_image
+    - linkify
+    - replacements
+    - smartquotes
+    - substitution
+    - tasklist
